--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@
     height:50%;
     width: 50%;
 }
+/* footer */
 .footer {
-    /* background-color: #7c45c4; */
-    /* background-color:  rgb(215,177,255); */
+   
     background: linear-gradient(90deg, rgba(124,69,196,1) 18%, rgba(63,9,207,1) 100%);
      
     color: white;
@@ -44,9 +44,7 @@
     justify-content: center;
   }
 
-  /* .footer a:hover {
-    color: white;
-  } */
+ 
 
   .footer .footer-heading {
     font-size: 1.25rem;
@@ -58,7 +56,7 @@
     margin-bottom: 10px;
   }
 
-  
+/*   animation */
   
     .back {
         width: 450px;
@@ -84,26 +82,27 @@
           border-radius: 100% 56% 56% 100% / 100% 100% 56% 56%;
         }
     }
+/* carousel */
     .carousel-item img {
-        border-radius: 50%;
-        width: 100px;
-        height: 100px;
-        object-fit: cover;
-      }
-      .carousel-item .testimonial-content {
-        text-align: center;
-        padding: 20px;
-      }
-      .carousel-control-prev, .carousel-control-next {
-        width: 5%;
-        color: black;
-        /* background-color: white; */
-      }
-      .carousel-control-prev-icon, .carousel-control-next-icon {
-        background-color: rgba(31, 29, 29, 0.5);
-        border-radius: 50%;
-        width: 70px;
-        height: 70px;
-        /* color: black; */
-      
-      }
+    width: 100px;
+    height: 100px;
+    border-radius: 2px;
+}
+
+h5 {
+    margin-top: 15px;
+    font-weight: bold;
+}
+
+p {
+    font-style: italic;
+    color: #555;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+}
