--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
     border-radius: 2px;
 }
 
-h5 {
+/* h5 {
     margin-top: 15px;
     font-weight: bold;
 }
@@ -98,7 +98,7 @@ h5 {
 p {
     font-style: italic;
     color: #555;
-}
+} */
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
